# conan-basic

./: CMakeLists.txt
include/: document.h  lexer.h
src/: document.c  lexer.c  main.c
